--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ img.kerkje{
    float: right;
    padding: 10px;
 }
+
 div.a
 {
 display: inline-block; width: 100%;
@@ -36,10 +37,12 @@ div.b{
       
 }
 div.c{
-    display: inline-block; width: 100%;
+    display: block; width: 75%;
     background-color: lightblue;
     text-align: center;
+    float: left;
 }
+
 textarea{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 15px;
