--- a/style2.css
+++ b/style2.css
@@ -20,9 +20,29 @@ h2{
 h3{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+h1.ons{
+    text-align: left;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+h3.ons{
+    text-align: left;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   }
 div.c{
     display: block; width: 100%;
     background-color: lightblue;
+    text-align: center;
+    float: left;
+}
+div123{
+    display: block; width: 25%;
+    background-color: lightblue;
+    text-align: center;
+    float: right;  
+}
+div.c{
+    display: block; width: 60%;
+    background-color: white;
     text-align: center;
     float: left;
 }
