--- a/style2.css
+++ b/style2.css
@@ -11,6 +11,7 @@ div.ab{
 }
 h1{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
 }
 h2{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -19,6 +20,7 @@ h2{
 }
 h3{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    
 }
 h1.ons{
     text-align: left;
@@ -46,4 +48,21 @@ div.c{
     text-align: center;
     float: left;
 }
+div.b{
+    display: inline-block; width: 100%;
+    background-color: #ffffff;
+    text-align: center;
+      
+}
+textarea.doen{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    background-color: #008cd4;
+    resize: none;
+    color: #ffffff;
+    padding: 1px;
+    margin: 5px;
+     
+}
+
 
