--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,21 @@
+
+.beginhoofd
+{
+    margin-top: 8%;    
+}
+
+.eindhoofd
+{
+    margin-top: 3%;
+}
+
+.teksthoofd
+{
+    background-color: rgb(225,225,225);
+    border-radius: 25px;
+    margin-left: 0%     
+}
+
 header.a
 {
     display: block; margin-left: auto; margin-right: auto; width: 100%;
@@ -77,3 +95,8 @@ h3.ons{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
 }
+
+
+
+
+
